--- a/index.html
+++ b/index.html
@@ -7,23 +7,37 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
 <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 
 </head>
 <body>
+ <header>
+     <div class="header">
+         <h1>Weather Dashboard</h1>
+     </div>
+ </header>   
+ <br>
+
 <div class="container">
-    <form class="d-flex">
-        <input id="city" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+    <div class=row> 
+    <form class="col-md">
+        <div class="card-body"></div>
+        <h5>Search for a City near You:</h5>
+        <form class="form-inline">
+        <input id="city" class="form-control" type="search" placeholder="Search" aria-label="Search">
         <button id="searchBtn" class="btn btn-outline-success" type="submit">Search</button>
       </form>  
-      <div class="card" >
+
+        </form>
+        </div>
+        <ul id="city-list"  class="list-group"></ul>
+        </div>
+<div id=humidity class="card" >
         <div class="card-body">
-
-
         </div>
       </div>
 
-
+<!--icons of the weather openweathermapp-->
 
 
 </div>
