add exploratory css

--- a/index.html
+++ b/index.html
@@ -21,22 +21,41 @@
 <div class="container">
     <div class=row> 
     <form class="col-md">
-        <div class="card-body"></div>
+        <div class="card-body">
         <h5>Search for a City near You:</h5>
         <form class="form-inline">
         <input id="city" class="form-control" type="search" placeholder="Search" aria-label="Search">
         <button id="searchBtn" class="btn btn-outline-success" type="submit">Search</button>
-      </form>  
-
-        </form>
+        </form>  
         </div>
+    </form>
+    </div>
+
+    <div>
         <ul id="city-list"  class="list-group"></ul>
+    </div>
+<div class="col-md2">
+<div id="current-weather" class='card'>
+    <div class="card-body">
+        <div id="city-date-icon">
+            <span id='city-name'></span>
+            <span id='current-icon'></span>
         </div>
-<div id=humidity class="card" >
-        <div class="card-body">
-        </div>
+        <p class="card-text" id="current-temp"></p>
+        <p class="card-text" id="current-humidity"></p>
+        <p class="card-text" id="current-uv"></p>
+        <p class="card-text" id="current-wind"></p>
+       </ul>
+       </div> 
       </div>
+      <div class="row>
+        <div id="forcast-weather" class="col-md2"
 
+      <div id=humidity class="card" >
+        <div class="card-body">
+        </div>  
+        </div>
+    </div>
 <!--icons of the weather openweathermapp-->
 
 
