trying to flexboxthe forcast

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <br>
 
 <div class="container">
-    <div class=row> 
+   
     <searchform class="col-md-4">
         <div class="searchcard-body">
         <h5>Search for a City near You:</h5>
@@ -29,9 +29,9 @@
         </form>  
         </div>
     </searchform>
-    </div>
+ 
 
-    <div>
+    <div class="current-card-container">
      <ul id="city-list"  class="list-group"></ul>
     </div>
 <div class="col-md-4">
@@ -48,10 +48,13 @@
         <p  id="current-wind"></p>
     </div>   
     </ul>
+    </div>
        </div> 
       </div>
+      <br>
       <span><h3>5-Day Forcast:</h3></span>
         <div id="forcast-weather" class="col-md-12">
+        </div>
        
             
 
