--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
        </div> 
       </div>
       <br>
+      <div class="future-forcast">
       <span><h3>5-Day Forcast:</h3></span>
         <div id="forcast-weather" class="col-md-12">
         </div>
-       
+    </div>
             
 
 
