--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
  <br>
 
 <div class="container">
-   
+   <div class="date">The Date today is<br>
+    <p id="currentDay"></p>
+    </div>
+   <br>
     <searchform class="col-md-4">
         <div class="searchcard-body">
         <h5>Search for a City near You:</h5>
@@ -127,7 +130,7 @@
 
 
 </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>  
     <script src="assets/js/script.js"></script>
 </body>
