--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
         <form class="form-inline">
         <input id="city" class="city-info" type="search" placeholder="City Name" aria-label="Search">
         <button id="searchBtn">Search</button>
+        <button id="addBtn">Add</button>
         <button id="clearBtn"  class="clBtn">Clear</button>
         </form> 
         </div>  
 
-        <div id="list-container" class="container-ls"></div>
+        <!--<div id="list-container" class="container-ls"></div>-->
         <ul id="city-list"  class="list-group"></ul>
-       
+       <p id=paragraph></p>
     </searchform>
     
     <div class="current-card-container">
